2020-02-18  Chris Down  <chris@chrisdown.name>

	* 45452: Test/B11kill.ztst: builtins: kill: Add `kill ''`
	regression test with explicit sigspec

	* 45451: Test/B11kill.ztst: builtins: kill: Add basic test suite

2020-02-17  brian m. carlson  <sandals@crustytoothpaste.net>

	* github #48/0002:
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git: vcs_info git:
	properly detect bare repositories

	* github #48/0001:
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git: vcs_info git:
	avoid warnings in bare repositories

2020-02-14  dana  <dana@dana.is>

	* unposted: Config/version.mk: Post-release version bump

	* unposted: Config/version.mk: Update for 5.8

	* Sam Foxman, Daniel Shahaf, dana: CVE-2019-20044: NEWS,
	README, Src/openssh_bsd_setres_id.c, Src/options.c, Src/zsh.mdd,
	Src/zsh_system.h, Test/E01options.ztst, Test/P01privileged.ztst,
	Test/README, configure.ac: Fix insecure dropping of privileges
	when unsetting PRIVILEGED option

	* unposted: Test/V01zmodload.ztst: Fix failing test from
	workers/45385

	* 45423 (tweaked): Completion/Unix/Command/_su: Improve arg
	handling, shell look-ups

2020-02-07  dana  <dana@dana.is>

	* unposted: Completion/Unix/Command/_zip: Recognise '--'

2020-02-06  Daniel Shahaf  <danielsh@apache.org>

	* 45385: Test/V01zmodload.ztst: Add a test for 'zmodload -Fa'
	preemptively disabling ("blacklisting"?) features.

2020-02-06  dana  <dana@dana.is>

	* unposted: Config/version.mk: Update for 5.7.1-test-3

	* Roman Perepelitsa: 45382: Src/Modules/system.c: Fix infinite
	loop in sysread

	* Martin von Wittich: 45388 (tweaked):
	Completion/Unix/Type/_diff_options: Restore -w completion lost
	in workers/43351

2020-02-03  Daniel Shahaf  <danielsh@apache.org>

	* 45368: Test/B01cd.ztst, Test/D02glob.ztst: Add tests for
	workers/45367's issue about double slashes in 'cd -P' and
	$PWD.

2020-02-02  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 45373: Src/loop.c, Test/C03traps.ztst: ERR_EXIT failed on